--- a/src/app/parking-slot-form.component/parking-slot-form.component.html
+++ b/src/app/parking-slot-form.component/parking-slot-form.component.html
@@ -1,37 +1,98 @@
 <!-- MORE INFORMATION ABOUT THIS FORM HERE: https://getbootstrap.com/docs/5.3/forms/validation/ -->
-<form class="row g-3 was-validated" novalidate>
+<form #parkingSlotForm="ngForm" class="row g-3 was-validated" novalidate (ngSubmit)="sendForm(parkingSlotForm)">
   <div class="col-md-4">
     <label for="inputModel" class="form-label">Modelo</label>
-    <input type="text" class="form-control" id="inputModel" />
-    <div class="invalid-feedback">Mensaje validacion.</div>
+    <input #modelo="ngModel" type="text" class="form-control" id="inputModel" 
+    [(ngModel)]="vehiculo.modelo"
+    name="modelo" minlength="3"
+    />
+    <div class="invalid-feedback">
+      @if(modelo.invalid && (modelo.dirty || modelo.touched))
+      {
+        @if(modelo.getError('minglength'))
+        {
+          <p>El modelo requiere 3 caracteres.</p>
+        }
+      }
+    </div>
   </div>
   <div class="col-md-4">
     <label for="inputDomain" class="form-label">Dominio</label>
-    <input type="text" class="form-control" id="inputDomain" />
-    <div class="invalid-feedback">Mensaje validacion.</div>
+    <input #dominio="ngModel" type="text" class="form-control" id="inputDomain" name="dominio"
+    [(ngModel)]="vehiculo.dominio" 
+    [attr.minlength]="vehiculo.esDominioNuevo ? 7 : 6"
+    required 
+    minlength="6"
+    
+    />
+    <div class="invalid-feedback">
+
+      @if(dominio.invalid && (dominio.dirty || dominio.touched))
+      {
+        @if(dominio.getError('required'))
+        {
+          <p>El dominio es obligatorio</p>
+        }
+        @if(dominio.getError('minlength'))
+        {
+          <p> El dominio tiene que tener por lo menos un caracter mas</p>
+        }
+      
+      }
+
+    </div>
   </div>
   <div class="col-md-6">
     <label for="checkInInputTime" class="form-label">Ingreso</label>
-    <input type="text" class="form-control" id="checkInInputTime" />
-    <div class="invalid-feedback">Mensaje validacion.</div>
+    <input #ingreso="ngModel" type="text" class="form-control" id="checkInInputTime" name="ingreso" [(ngModel)]="vehiculo.ingreso" 
+    required/>
+    <div class="invalid-feedback">
+      @if(ingreso.invalid && (ingreso.dirty || ingreso.touched))
+      {
+        @if(ingreso.getError('required'))
+        {
+          <p>La hora de ingreso es obligatoria</p>
+        }
+
+      }
+    </div>
   </div>
   <div class="col-md-3">
     <label for="brandSelect" class="form-label">Marca</label>
-    <select class="form-select" id="brandSelect">
-      <option value="">opciones...</option>
+    <select class="form-select" id="brandSelect" name="marcaSeleccionada" [(ngModel)]="vehiculo.marcaSeleccionada">
+      @for(brand of availableBrands; track $index){
+        <option [value]="brand.id">{{brand.name}}</option>
+      }
     </select>
-    <div class="invalid-feedback">Mensaje validacion.</div>
+    
   </div>
   <div class="col-md-3">
-    <label for="vehiculeTypeTypeSelect" class="form-label">Tipo Vehiculo</label>
-    <select class="form-select" id="vehicleTypeSelect">
-      <option value="">opciones...</option>
+    <label for="vehiculeTypeTypeSelect" class="form-label" >Tipo Vehiculo</label>
+    <select #tipoVehiculo="ngModel" 
+    name="tipoVehiculoSeleccionado" [(ngModel)]="vehiculo.tipoVehiculoSeleccionado" required
+    class="form-select" id="vehicleTypeSelect">
+      <option [ngValue]="VehicleTypeReference.MOTORCYCLE">Moto</option>
+      <option [ngValue]="VehicleTypeReference.CAR">Auto</option>
+      <option [ngValue]="VehicleTypeReference.TRUCK">Camioneta</option>
     </select>
-    <div class="invalid-feedback">Mensaje validacion.</div>
+    <div class="invalid-feedback">
+      @if(tipoVehiculo.invalid && (tipoVehiculo.dirty || tipoVehiculo.touched))
+      {
+        @if(tipoVehiculo.getError('required'))
+        {
+          <p>El tipo de vehiculo es obligatorio</p>
+        }
+
+      }
+
+    </div>
   </div>
   <div class="col-12">
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="newDomainCheck" />
+      <input   class="form-check-input" type="checkbox" id="newDomainCheck"
+      name="esDominioNuevo" [(ngModel)]="vehiculo.esDominioNuevo" required
+      #esDominioNuevo="ngModel"
+      />
       <label class="form-check-label" for="newDomainCheck">
         Nuevo dominio?
       </label>
